--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -24,3 +24,14 @@ public net.minecraft.world.level.material.Material$Builder m_76357_()Lnet/minecr
 public net.minecraft.world.level.material.Material$Builder m_76360_()Lnet/minecraft/world/level/material/Material$Builder; # notSolidBlocking
 
 public net.minecraft.client.gui.screens.worldselection$WorldTab
+
+public net.minecraft.world.item.crafting.SingleItemRecipe$Serializer
+
+public net.minecraft.world.level.levelgen.NoiseRouterData m_224496_(Lnet/minecraft/core/Registry;)Lnet/minecraft/world/level/levelgen/NoiseRouter; # nether
+public net.minecraft.world.level.levelgen.NoiseRouterData m_224509_(Lnet/minecraft/core/Registry;)Lnet/minecraft/world/level/levelgen/NoiseRouter; # floatingIslands
+public net.minecraft.world.level.levelgen.NoiseRouterData m_224485_(Lnet/minecraft/core/Registry;ZZ)Lnet/minecraft/world/level/levelgen/NoiseRouter; # overworld
+public net.minecraft.world.level.levelgen.NoiseRouterData m_224443_(Lnet/minecraft/world/level/levelgen/DensityFunction;IIIIDIID)Lnet/minecraft/world/level/levelgen/DensityFunction; # slide
+
+#test
+public net.minecraft.client.gui.screens.worldselection.CreateWorldScreen m_100878_(Lnet/minecraft/server/packs/repository/PackRepository;)V # tryApplyNewDataPacks
+
