--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -14,24 +14,14 @@ public net.minecraft.server.dedicated.Settings m_139805_(Ljava/lang/String;I)I #
 public net.minecraft.world.level.chunk.LevelChunkSection f_187995_ # biomes
 
 public net.minecraft.world.level.chunk.ChunkGenerator f_223020_ # featuresPerStep
-public net.minecraft.world.level.chunk.ChunkGenerator f_223021_ # generationSettingsGetter
 
 public net.minecraft.world.level.chunk.ChunkGenerator m_187717_(Lnet/minecraft/world/level/chunk/ChunkAccess;)Lnet/minecraft/world/level/levelgen/structure/BoundingBox; # getWritableArea
 
 public net.minecraft.tags.BiomeTags m_207630_(Ljava/lang/String;)Lnet/minecraft/tags/TagKey; # create
 
-public net.minecraft.world.level.material.Material$Builder m_76357_()Lnet/minecraft/world/level/material/Material$Builder; # destroyOnPush
-public net.minecraft.world.level.material.Material$Builder m_76360_()Lnet/minecraft/world/level/material/Material$Builder; # notSolidBlocking
-
 public net.minecraft.client.gui.screens.worldselection$WorldTab
 
 public net.minecraft.world.item.crafting.SingleItemRecipe$Serializer
 
-public net.minecraft.world.level.levelgen.NoiseRouterData m_224496_(Lnet/minecraft/core/Registry;)Lnet/minecraft/world/level/levelgen/NoiseRouter; # nether
-public net.minecraft.world.level.levelgen.NoiseRouterData m_224509_(Lnet/minecraft/core/Registry;)Lnet/minecraft/world/level/levelgen/NoiseRouter; # floatingIslands
-public net.minecraft.world.level.levelgen.NoiseRouterData m_224485_(Lnet/minecraft/core/Registry;ZZ)Lnet/minecraft/world/level/levelgen/NoiseRouter; # overworld
-public net.minecraft.world.level.levelgen.NoiseRouterData m_224443_(Lnet/minecraft/world/level/levelgen/DensityFunction;IIIIDIID)Lnet/minecraft/world/level/levelgen/DensityFunction; # slide
-
-#test
-public net.minecraft.client.gui.screens.worldselection.CreateWorldScreen m_100878_(Lnet/minecraft/server/packs/repository/PackRepository;)V # tryApplyNewDataPacks
+public net.minecraft.world.entity.monster.Zombie m_34310_(Lnet/minecraft/world/entity/EntityType;)V # convertToZombieType
 
